--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,18 +2,15 @@ linters:
   disable-all: true
   enable:
     # enabled by default:
-    - deadcode
     - errcheck
     - gosimple
     - govet
     - ineffassign
     - staticcheck
-    - structcheck
     - typecheck
     - unused
-    - varcheck
     # disabled by default:
-    # - gocritic TODO(junk1tm): enable when github.com/go-critic/go-critic/issues/1193 is closed
+    - gocritic
     - gofumpt
 
 linters-settings:
